@@ -6,7 +6,8 @@ Nangband ChangeLog - If it's not broken, let's fix it until it is.
 - Fixed up lots of the save code, thanks pelpel. (takkaria)
 - Added pelpel's equippy chars patch; they are now an option. (takkaria)
 - Applied pelpel's main-xaw.c patch. (takkaria)
-- Changed referances to 'lite' to 'light'. (parody)
+- Changed referances to 'lite', to 'light'. (parody)
+- Added some belts. (parody)
 
 2002-04-29
 ----------
